# draft-storage

./: package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: migrations.rs  mod.rs
src/css/: main.css
