[package]
name = "draft-storage"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "draft_storage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = {version = "0.32.1", features = ["bundled"]}
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
once_cell = "1.19.0"
dirs = "5.0.1"

